Change 8020 pandas images.

--- a/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
+++ b/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 'The 80/20 Pandas Tutorial: 5 Key Methods for the Majority of Your Data Transformation Needs'\n",
+    "# 'The 80/20 Pandas Tutorial'\n",
     "> An opinionated pandas tutorial on my preferred methods to accomplish the most essential data transformation tasks in a way that will make veteran R and tidyverse users smile.\n",
     "\n",
     "- toc: false\n",
@@ -2667,7 +2667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
