--- a/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
+++ b/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 'How to Build a Gradient Boosting Machine from Scratch'\n",
     "\n",
-    "> Understand the intuidition behind the gradient boosting machine (GBM) and learn how to implement one from scratch.\n",
+    "> Understand the intuition behind the gradient boosting machine (GBM) and learn how to implement it from scratch.\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
