--- a/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
+++ b/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](nb_images/gbm_bay.png \"SF from Angel Island\")"
+    "![](nb_images/gbm_bay.jpg \"SF from Angel Island\")"
    ]
   },
   {
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
