Fix latex ttypo in gbm post.

--- a/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
+++ b/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
@@ -509,9 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "F_M(x) = F_0(x) + \\eta \\sum_{m = 1}^{M} h_m(x})\n",
-    "$$\n"
+    "$$F_M(x) = F_0(x) + \\eta \\sum_{m = 1}^{M} h_m(x))$$"
    ]
   },
   {
