Fix that latex typo for real.

--- a/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
+++ b/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
@@ -509,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_M(x) = F_0(x) + \\eta \\sum_{m = 1}^{M} h_m(x))$$"
+    "$$F_M(x) = F_0(x) + \\eta \\sum_{m = 1}^{M} h_m(x)$$"
    ]
   },
   {
