Fix panda vegetarian sttatus.

--- a/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
+++ b/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahh, pandas. In addition to being everyone's favorite vegetarian bear from south central China, it's also _the_ python library for working with tabular data, a.k.a. dataframes.\n",
+    "Ahh, pandas. In addition to being everyone's favorite mostly vegetarian bear from south central China, it's also _the_ python library for working with tabular data, a.k.a. dataframes.\n",
     "When you dive into pandas, you'll quickly find out that there is a lot going on; indeed there are [hundreds](https://pandas.pydata.org/docs/reference/frame.html) of methods for operating on dataframes. But luckily for us, as with many areas of life, there is a [Pareto Principle](https://en.wikipedia.org/wiki/Pareto_principle), or 80/20 rule, that will help us focus on the small set of methods that collectively solve the majority of our data transformation needs.\n",
     "\n",
     "If you're like me, then pandas is not your first data-handling tool; maybe you've been using SQL or R with `data.table` or `dplyr`. If so, that's great because you already have a sense for the key operations we need when working with tabular data. \n",
@@ -2667,7 +2667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
