--- a/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
+++ b/_notebooks/2020-12-08-gradient-boosting-machine-from-scratch.ipynb
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we keep doing this, at each stage we'll train a new model $h_m(x)$ on the residuals from the previous composite model $F_{m-1}(x) - y$, and we'll get a new composite model\n",
+    "If we keep doing this, at each stage we'll train a new model $h_m(x)$ on the previous composite model's residuals $y-F_{m-1}(x)$, and we'll get a new composite model\n",
     "\n",
     "$$F_m(x) = F_{m-1}(x) + h_m(x).$$\n",
     "\n",
