--- a/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
+++ b/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahh, gradient descent. It's probably one of the most ubiquitous algorithms used in data science, but you're unlikely to see it being celebrated in the limelight of the Kagle podium.  Rather than taking center stage, gradient descent operates under the hood, powering the training for a wide range of models including deep neural networks, gradient boosting trees, generalized linear models, mixed effects models, and even the humble linear regressor. Getting an intuition for the algorithm will reveal how model fitting actually works and help us to see the common thread connecting a wide range of seemingly unrelated models.  In this post we'll get the intuition for gradient descent with a *fresh* analogy, develop  the mathematical formulation, and ground our understanding by using it to train ourselves a linear regression model."
+    "Ahh, gradient descent. It's probably one of the most ubiquitous algorithms used in data science, but you're unlikely to see it being celebrated in the limelight of the Kaggle podium.  Rather than taking center stage, gradient descent operates under the hood, powering the training for a wide range of models including deep neural networks, gradient boosting trees, generalized linear models, mixed effects models, and even some variants of the humble linear regressor. Getting an intuition for the algorithm will reveal how model fitting actually works and help us to see the common thread connecting a wide range of seemingly unrelated models.  In this post we'll get the intuition for gradient descent with a *fresh* analogy, develop  the mathematical formulation, and ground our understanding by using it to train ourselves a linear regression model."
    ]
   },
   {
@@ -78,7 +78,7 @@
     "\n",
     "[vector component in $x$ direction, vector component in $y$ direction]\n",
     "\n",
-    "Turns out that the gradient of a function evaluated at a particular location  yields a vector that points in the direction of fastest *increase* in the function, pretty similar to what we'relooking for.\n",
+    "Turns out that the gradient of a function evaluated at a particular location  yields a vector that points in the direction of fastest *increase* in the function, pretty similar to what we're looking for.\n",
     "The gradient of $f(x,y)$ is given by\n",
     "\n",
     "$$ \\nabla f(x,y) = \\left [ \\frac{\\partial f(x,y)}{\\partial x}, \\frac{\\partial f(x,y)}{\\partial y} \\right ] $$\n",
@@ -158,8 +158,11 @@
    "metadata": {},
    "source": [
     "## Training a Linear Regression Model with Gradient Descent\n",
-    "To get the intuition for how we use gradient descent to train models, we'll use the hopefully familiar [ordinary least squares](https://en.wikipedia.org/wiki/Ordinary_least_squares) regression model, a.k.a. *linear regression*.\n",
-    "In this problem, we have numerical feature $x$ and numerical target $y$, and we want to find a model of the form\n",
+    "To get the intuition for how we use gradient descent to train models, let’s use it to train a linear regression model.\n",
+    "Note that while [some variants](https://en.wikipedia.org/wiki/Regularized_least_squares#Arbitrary_kernel) of linear regression [do use gradient descent](https://scikit-learn.org/stable/modules/linear_model.html) for training, we would never use it to train a simple linear regression in real life since there is an exact\n",
+    "[analytical solution](https://en.wikipedia.org/wiki/Ordinary_least_squares) for the best-fit parameter values.\n",
+    "\n",
+    "Anyway, in the simple linear regression problem we have numerical feature $x$ and numerical target $y$, and we want to find a model of the form\n",
     "\n",
     "$$F(x) = \\alpha + \\beta x$$\n",
     "\n",
@@ -491,7 +494,7 @@
    "source": [
     "## Wrapping Up\n",
     "\n",
-    "There you have it, gradient descent explained with a fresh new analogy having nothing whatsoever to do with foggy mountains, plus an implemented example fitting an ordinary least squares model.\n",
+    "There you have it, gradient descent explained with a fresh new analogy having nothing whatsoever to do with foggy mountains, plus an implemented example fitting a linear model.\n",
     "While we often see gradient descent used to train models by performing an optimization in parameter space, as in linear regression and neural networks, there are other ways to use this powerful technique to train models. \n",
     "In particular, we'll soon see how our beloved gradient boosting tree models use gradient descent in *prediction space*, rather than parameter space.\n",
     "Stay tuned for that mind bender in a future post."
