Publish the gradient descent post.

--- a/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
+++ b/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "# Get Down with Gradient Descent\n",
-    "> Get down with the intuition for gradient descent using a fresh analogy, develop the mathematical formulation of the algorithm, and implement it from scratch to train a linear regression model.\n",
+    "> Get down with the intuition for gradient descent via a fresh analogy, develop the mathematical formulation of the algorithm, and implement it from scratch to train a linear regression model.\n",
     "- toc: false\n",
     "- badges: true\n",
-    "- comments: false\n",
-    "- hide: true\n",
+    "- comments: true\n",
+    "- hide: false\n",
     "- image: images/gd_get_down.png"
    ]
   },
