Publish gradient boosting descent post.

--- a/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
+++ b/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
@@ -4,14 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (Preprint) How Gradient Boosting Does Gradient Descent\n",
-    "> Understand how gradient boosting does gradient descent in function space to minimize any arbitrary loss function in the service of creating a good model.\n",
+    "# How Gradient Boosting Does Gradient Descent\n",
+    "> Understand how gradient boosting does gradient descent in function space to minimize any differentiable loss function in the service of creating a good model.\n",
     "\n",
     "- toc: false\n",
     "- badges: false\n",
     "- comments: true\n",
-    "- hide: true\n",
-    "- image: "
+    "- hide: false\n",
+    "- image: images/gradient_boosting_sign.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](nb_images/gradient_boosting_sign.png \"Yet another sign post.\")"
    ]
   },
   {
@@ -19,7 +33,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In the last two posts, we learned the basics of [gradient boosting machines](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch) and the [gradient descent algorithm](https://blog.mattbowers.dev/get-down-with-gradient-descent).  But we still haven't explicitly addressed what puts the \"gradient\" in gradient boosting. It turns out that gradient boosting models are using a sort of gradient descent to Minimize their loss function; according to [Friedman's classic paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf),  they're doing gradient descent in \"function space\". If you're like me, and this is your first encounter with this idea, then the phrase \"gradient descent in function space\" is going to sound a little, ahem, mysterious. No worries, friends; we're about to make sense of it all.\n",
+    "In the last two posts, we learned the basics of [gradient boosting machines](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch) and the [gradient descent algorithm](https://blog.mattbowers.dev/get-down-with-gradient-descent).  But we still haven't explicitly addressed what puts the \"gradient\" in gradient boosting. It turns out that gradient boosting models are using a sort of gradient descent to minimize their loss function; according to [Friedman's classic paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf),  they're doing gradient descent in \"function space\". If you're like me, and this is your first encounter with this idea, then the phrase \"gradient descent in function space\" is going to sound a little, ahem, mysterious. No worries, friends; we're about to make sense of it all.\n",
     "\n",
     "Understanding the underlying mechanics of gradient boosting as a form of gradient descent will empower us to train our models with custom loss functions. This opens up many interesting possibilities including doing not only regression and classification, but also predicting quantiles, prediction intervals, and even the conditional probability distribution of the response variable.\n"
    ]
@@ -81,9 +95,14 @@
     "\n",
     "$$ L(\\mathbf{y},\\mathbf{\\hat{y}} + \\mathbf{r}) \\le L(\\mathbf{y},\\mathbf{\\hat{y}})$$\n",
     "\n",
-    "But this doesn't actually change our model. We need a way to update $F(\\mathbf{X})$ so that the predictions it returns are nudged in the direction of the negative partial derivative of the loss with respect to each prediction. So how can we do that?\n",
+    "The problem is that this will only work for in-sample data, because we only know the nudge values for the cases which are present in the training dataset.\n",
+    "In order for our model to generalize to unseen test data, we need a way to get the nudge values for new observations of the independent variables.\n",
+    "So how can we do that?\n",
     "\n",
-    "Well what if we fit another model $h(\\mathbf{X})$ that used our same features $\\mathbf{X}$ to predict our desired  nudge values $\\mathbf{r}$, and then we added that new model to our original model $F(\\mathbf{X})$. For a given prediction the nudge model $h(\\mathbf{X})$ would essentially return an approximation of the desired nudge, so adding it would push the prediction in the right direction to decrease the loss function. Since both the initial model $F(\\mathbf{X})$ and the nudge model $h(\\mathbf{X})$ are functions of our features $\\mathbf{X}$, we can add the two functions to get an updated model. \n",
+    "Well what if we fit another model $h(\\mathbf{X})$ that used our same features $\\mathbf{X}$ to predict our desired  nudge values $\\mathbf{r}$, and then we added that new model to our original model $F(\\mathbf{X})$. \n",
+    "For a given prediction the nudge model $h(\\mathbf{X})$ would essentially return an approximation of the desired nudge, so adding it would push the prediction in the right direction to decrease the loss function. \n",
+    "Furthermore, the nudge model can return predictions of the nudges for out-of-sample cases which are not present in the training dataset.\n",
+    "Since both the initial model $F(\\mathbf{X})$ and the nudge model $h(\\mathbf{X})$ are functions of our features $\\mathbf{X}$, we can add the two functions to get an updated model that can generalize beyond the training data.\n",
     "\n",
     "$$F_{\\text{new}} (\\mathbf{X}) = F(\\mathbf{X}) + h(\\mathbf{X})$$\n"
    ]
@@ -100,6 +119,8 @@
     "We create an initial model $F_0(\\mathbf{X})$  that predicts a constant value. We choose the constant value that would give the best loss score.\n",
     "\n",
     "$$F_0(\\mathbf{X}) = \\underset{c}{\\operatorname{argmin}} L(\\mathbf{y}, c)$$\n",
+    "\n",
+    "Then we iteratively update the initial model with $M$ nudge models.\n",
     "\n",
     "For $m$ in 0 to $M-1$:\n",
     "\n",
@@ -143,11 +164,12 @@
     "## Gradient boosting versus parameter gradient descent \n",
     "The generic gradient boosting algorithm outlined above  implies two key differences from parameter gradient descent.\n",
     "\n",
-    "1. instead of nudging parameters, we nudge each individual prediction, thus instead of taking the gradient of loss with respect to the parameters, we take the gradient with respect to the predictions\n",
-    "2. instead of directly adding the negative gradient to our current  parameter values, we create a functional approximation of the negative gradient and add that to our model. Our functional approximation is just a crappy model that tries to use the model features to predict the negative gradient of the loss with respect to our current model predictions.\n",
+    "1. Instead of nudging parameters, we nudge each individual prediction, thus instead of taking the gradient of loss with respect to the parameters, we take the gradient with respect to the predictions.\n",
+    "2. Instead of directly adding the negative gradient to our current  parameter values, we create a functional approximation of the negative gradient and add that to our model. Our functional approximation is just a crappy model that tries to use the model features to predict the negative gradient of the loss with respect to our current model predictions.\n",
     "\n",
     "The true genius of the gradient boosting algorithm is in chasing the negative gradient of the loss  with crappy models, rather than using it to directly update our predictions.\n",
-    "If we just directly added the negative gradient of the loss to our predictions, and plugged them into the loss function we could get a lower loss score, but we wouldn't actually be updating our model. Instead we train a crappy model to predict the negative gradient of the loss with respect to the current model predictions, thus we can iteratively  update our composite model by adding these crappy models to it.\n"
+    "If we just directly added the negative gradient of the loss to our predictions, and plugged them into the loss function we could get a lower loss score, but our updated model would be useless since it couldn't make predictions on new out-of-sample data.\n",
+    "Instead we train a crappy model to predict the negative gradient of the loss with respect to the current model predictions, thus we can iteratively  update our composite model by adding these crappy models to it.\n"
    ]
   },
   {
@@ -193,7 +215,7 @@
     "\n",
     "$$\\mathbf{r} = -\\nabla_{\\hat{\\mathbf{y}}} L(\\mathbf{y}, \\hat{\\mathbf{y}}) = \\frac{2}{n}(\\mathbf{y} - \\hat{\\mathbf{y}})$$\n",
     "\n",
-    "which is proportional to the residual vector $\\mathbf{y} - \\hat{\\mathbf{y}}$. This means that when we use the mean squared error loss function, our nudge values are given by the current model residuals, and therefore each new crappy model target's the previous model's residuals. \n",
+    "which is proportional to the residual vector $\\mathbf{y} - \\hat{\\mathbf{y}}$. This means that when we use the mean squared error loss function, our nudge values are given by the current model residuals, and therefore each new crappy model targets the previous model's residuals. \n",
     "\n",
     "And this result brings us full circle, back to our original intuition from the first GBM post about chasing residuals with crappy models. Now we see that intuitive idea is just a special case of the more general and, dare I say, even more beautiful idea of chasing the negative gradient of the loss function with crappy models."
    ]
