Change impage for gradient boosting descent post.

--- a/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
+++ b/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
@@ -11,7 +11,7 @@
     "- badges: false\n",
     "- comments: true\n",
     "- hide: false\n",
-    "- image: images/gradient_boosting_sign.png"
+    "- image: images/gb_gd.jpg"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](nb_images/gradient_boosting_sign.png \"Yet another sign post.\")"
+    "![](nb_images/gb_gd.jpg \"Whiteboard session at Playa Pelada\")"
    ]
   },
   {
