More writing on the post.pyspark

--- a/_drafts/how-to-get-pyspark-on-your-laptop.ipynb
+++ b/_drafts/how-to-get-pyspark-on-your-laptop.ipynb
@@ -4,14 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to Get PySpark Running in Your Local Jupyter Notebook"
+    "# How to Run PySpark in a Jupyter Notebook on Your Laptop"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to Install Spark\n",
+    "Well, I'm not going to fuss around and try to sugar coat this for us, so I'll just say it: it's time to learn pyspark.\n",
+    "Yes, yes, I know, I can hear you saying that we just spent all that time converting from R and learning python and pandas and why the hell do we need yet another API for working with dataframes?\n",
+    "That's a totally fair question.\n",
+    "\n",
+    "Basically it comes down to scalability. \n",
+    "If our pythonic prototypes are going to be of much use in the real world where datasets are humongous, we need a way for our computations and datasets to scale across multiple nodes in a distributed system.\n",
+    "\n",
+    "Enter spark.\n",
+    "\n",
+    "[Apache Spark](https://spark.apache.org/) is a unified analytics engine for large-scale data processing. \n",
+    "[PySpark](https://spark.apache.org/docs/latest/api/python/)  is essentially a way to access the functionality of spark via python code. \n",
+    "While there are other high-level interfaces to spark (such as Java, Scala, and R), for data scientists who are already working extensively with python, pyspark will be the natural interface of choice.\n",
+    "\n",
+    "So, here's the plan. \n",
+    "First we're going to get set up to run pyspark locally in a jupyter notebook on our laptop.\n",
+    "This is my preferred environment for interactively playing with pyspark and learning the ropes.\n",
+    "Then we're going to get up and running in pyspark as quickly as possible by reviewing the most essential functionality and comparing it to how we would do things in pandas.\n",
+    "Once we're comfortable running pyspark on the laptop, it's going to be much easier to jump onto a distributed cluster and run pyspark at scale.\n",
+    "\n",
+    "Great, let's do this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to Run PySpark in a Jupyter Notebook on Your Laptop\n",
+    "\n",
+    "Ok, I'm going to walk us through how to get things installed on a Mac or Linux machine where we're using homebrew and conda to manage virtual environments.\n",
+    "If you have a different setup, your favorite search engine will help you."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Spark\n",
     "\n",
     "Install Scala.\n",
     "\n",
@@ -75,9 +111,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to Install PySpark\n",
+    "### Install PySpark\n",
     "\n",
-    "Use conda to install the pyspark and findspark python packages.\n",
+    "Use conda to install the pyspark python package.\n",
+    "As usual, it's advisable to do this in a new virtual environment.\n",
     "\n",
     "\n",
     "```\n",
@@ -103,7 +140,7 @@
     ">>> \n",
     "```\n",
     "\n",
-    "This time we get a familiar `>>>` prompt.\n",
+    "This time we get a familiar python `>>>` prompt.\n",
     "This is an interactive pyspark shell where we can easily experiment with pyspark.\n",
     "Feel free to run the example code in this post here in the pyspark shell, or, if you prefer a notebook, read on and we'll get set up to run pyspark in a jupyter notebook."
    ]
@@ -112,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Spark Session Object\n",
+    "### The Spark Session Object\n",
     "\n",
     "You may have noticed that when we launched that pyspark interactive shell, it told us that something called `SparkSession` was available as `'spark'`.\n",
     "So basically, what's happening here is that when we launch the pyspark shell, it instantiates an object called `spark` which is an instance of class `pyspark.sql.session.SparkSession`.\n",
@@ -131,13 +168,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run PySpark in a Jupyter Notebook\n",
+    "### Create a PySpark Session in a Jupyter Notebook\n",
     "\n",
     "There are a few ways to run pyspark in jupyter which you can read about [here](https://www.datacamp.com/community/tutorials/apache-spark-python).\n",
     "\n",
     "For derping around with pyspark on your laptop, I think the best way is to instantiate a spark session from a  jupyter notebook running on a regular python kernal. \n",
     "The method we'll use involves running a standard jupyter notebook session with a python kernal and using the findspark package to initialize the spark session.\n",
-    "Install the findspark package.\n",
+    "So, first install the findspark package.\n",
     "\n",
     "```\n",
     "$ conda install findspark\n",
@@ -149,8 +186,12 @@
     "$ jupyter notebook\n",
     "```\n",
     "\n",
-    "After firing up a fresh notebook, there are a couple things we need to do to create a new spark session.\n",
-    "First, we import findspark and run its `init` method. This is going to find your spark install."
+    "\n",
+    "Go ahead and fire up a new notebook using a regular python 3 kernal.\n",
+    "Once you land inside the notebook, there are a couple things we need to do to get a spark session instantiated.\n",
+    "You can thing of this as boilerplate code that we need to run in the first cell of a notebook where we're going to use pyspark.\n",
+    "\n",
+    "First import findspark and run its `init` method."
    ]
   },
   {
@@ -196,8 +237,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spark provides a handy web UI that you can use for monitoring and debugging.\n",
-    "You can open it in your web browser at [http://localhost:4040/jobs/](http://localhost:4040/jobs/)."
+    "Once you run this, you're ready to rock and roll with pyspark in your jupyter notebook.\n",
+    "\n",
+    "Note that Spark provides a handy web UI that you can use for monitoring and debugging.\n",
+    "Once you instantiate the spark session You can open the UI in your web browser at [http://localhost:4040/jobs/](http://localhost:4040/jobs/)."
    ]
   },
   {
